<resources>
    <string name="app_name">Space Wallpaper</string>
    <string name="title_service_on">Refresh enabled</string>
    <string name="summary_service_on">Enable/disable downloading new photos</string>
    <string name="title_wifi_only">Wi-Fi only</string>
    <string name="summary_wifi_only">Download new photo only with Wi-Fi</string>
    <string name="choose_sat_title">Choose satellite</string>
    <string name="choose_sat_summary">Two satellites are accessible</string>
    <string-array name="entries"
        translatable="false">
        <item>HIMAWARI-8</item>
        <item>DSCOVR:EPIC</item>
    </string-array>
    <string-array  name="entry_values"
        translatable="false">
        <item>HIMAWARI</item>
        <item>DSCOVR</item>
    </string-array>
    <string name="title_crop">Crop a photo</string>
    <string name="summary_crop">Increase the picture by cutting edge</string>
    <string name="loadingTrue">Loading...</string>
    <string name="loadingNoWiFi">Use Wi-Fi or check settings.</string>
    <string name="loadingNoNetwork">No network</string>
    <string name="linkToDeerslab">Other apps of this developer</string>
</resources>
