<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="service_on"
        android:title="@string/title_service_on"
        android:summary="@string/summary_service_on"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="wifi_only"
        android:title="@string/title_wifi_only"
        android:summary="@string/summary_wifi_only"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="cropImage"
        android:title="@string/title_crop"
        android:summary="@string/summary_crop"
        android:defaultValue="false" />

    <ListPreference
        android:entries="@array/entries"
        android:entryValues="@array/entry_values"
        android:key="sat_key"
        android:summary="@string/choose_sat_summary"
        android:title="@string/choose_sat_title">
    </ListPreference>

    <Preference android:title="@string/linkToDeerslab" >
        <intent android:action="android.intent.action.VIEW"
            android:data="https://play.google.com/store/apps/dev?id=9167377661015982979" />
    </Preference>

</PreferenceScreen>